vi-mode: fix computation of zz cmd when folding

REVIEW: 114224
BUG: 322433